--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
-  "dependencies": {
-    "fastify": "^5.6.2"
+  "name": "app",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "test": "vitest",
+    "test:run": "vitest run"
   },
-  "type": "module"
+  "dependencies": {
+    "fastify": "^5.6.2",
+    "nats": "^2.29.3"
+  },
+  "devDependencies": {
+    "vitest": "^4.0.17"
+  }
 }
