--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@mikro-orm/cli": "^6.6.5",
+    "@mikro-orm/core": "^6.6.5",
+    "@mikro-orm/migrations": "^6.6.5",
+    "@mikro-orm/postgresql": "^6.6.5",
     "fastify": "^5.6.2",
     "nats": "^2.29.3"
   },
